<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:paddingTop="16dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout0"
        android:layout_marginLeft="10dp"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/tvHeader"
        android:text="@string/SearchFiltersHeader"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_below="@id/linearLayout0"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ImageSizeLable"
        android:id="@+id/tvImageSizeLable"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/imageSize_array"
            android:layout_toRightOf="@id/tvImageSizeLable"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner_1"
            android:layout_marginLeft="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ImageColorLable"
            android:id="@+id/tvImageColorLable"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp" />

        <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:entries="@array/imageColor_array"
        android:layout_toRightOf="@id/tvImageColorLable"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner_2"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tvImageTypeLable"
            android:id="@+id/tvImageTypeLable"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/imageType_array"
            android:layout_toRightOf="@id/tvImageTypeLable"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner_3"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@id/linearLayout3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tvSiteFilterLable"
            android:id="@+id/tvSiteFilterLable"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSiteFilter"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/tvImageTypeLable"
            android:text="@string/etSiteFilter"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_below="@id/linearLayout4"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnSubmitFilter"
            android:id="@+id/btnSubmit" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnResetFilter"
            android:id="@+id/btnReset"
            android:layout_marginLeft="20dp" />

    </LinearLayout>




</RelativeLayout>